--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
 	<meta charset="UTF-8">
 	<title>Выборы</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
 	<!-- Main Page -->
-	<div class="main">
+	<div class="main animated fadeIn">
 		<div class="main-cards">
-			<div class="main-cards-item main-cards-item-active">
+			<div class="main-cards-item animated fadeInLeft">
 				<div class="candidate-block">
 					<div class="photo photo-1"></div>
 					<div class="result">
-						<div class="result-count">35%</div>
+						<div class="result-count">0%</div>
 						<div class="progress">
-							<div class="progress-bar progress-bar-1"></div>
+							<div class="progress-bar"></div>
 						</div>
 					</div>
 				</div>
@@ -32,13 +33,13 @@
 				<div class="bio">13 декабря 2016 года объявил, что намерен баллотироваться на президентских выборах 2018 года,
 					опубликовал основные положения своей предвыборной программы и начал собирать сторонников</div>
 			</div>
-			<div class="main-cards-item ">
+			<div class="main-cards-item animated fadeInRight">
 				<div class="candidate-block">
 					<div class="photo photo-2"></div>
 					<div class="result">
-						<div class="result-count">65%</div>
+						<div class="result-count">0%</div>
 						<div class="progress">
-							<div class="progress-bar progress-bar-2"></div>
+							<div class="progress-bar"></div>
 						</div>
 					</div>
 				</div>
@@ -64,8 +65,8 @@
 	</div>
 
 	<!-- Popup -->
-	<div class="overlay">
-		<div class="popup">
+	<div class="overlay animated">
+		<div class="popup animated fadeInDown">
 			<div class="popup-title">не доволен прошедшими выборами?</div>
 			<div class="popup-subtitle">создай своего кандидата</div>
 			<button id="popup-btn" class="popup-btn">создать</button>
@@ -73,8 +74,8 @@
 	</div>
 
 	<!-- Customization -->
-	<div class="custom">
-		<div class="custom-info">
+	<div class="custom animated fadeIn">
+		<div class="custom-info animated fadeInLeft">
 			<label for="name">Фамилия Имя Отчество</label>
 			<input type="text" id="name">
 			<label for="age">Возраст, лет</label>
@@ -104,7 +105,7 @@
 			<div id="ready" class="btn">готово</div>
 		</div>
 
-		<div class="custom-style">
+		<div class="custom-style animated fadeInRight">
 			<div class="style-text">
 				Выберите цвет кожи
 			</div>
